Implement stripe custom payment element and update person store and canvas components
